# 11_Scop

./: .gitignore  CMakeLists.txt  Makefile  README.md  scop
inc/: get_next_line.h  scop.h
libft/: ft_putchar.c  libft.h
res/shaders/: shader_vertex.glsl
src/: clean.c  color_1.c  ft_2d_str_count.c  ft_atof.c  get_next_line.c  init.c  key_functions_1.c  key_functions_3.c  key_functions_4.c  key_functions_5.c  load_tga.c  main.c  main_errors.c  main_gl_buffers.c  main_loop.c  main_matrix.c  main_parser.c  main_render.c  main_shader.c  matrix_math_1.c  matrix_math_2.c  openglhw.c  parser_indices.c  vector_math_1.c  vector_math_2.c
